#1577 Replaced two usages of 'Stream.collect(Collectors.toList())' with 'Stream.toList()'